--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,10 @@ spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate ddl auto (create, create-drop, validate, update, none)
-spring.jpa.hibernate.ddl-auto = none
+spring.jpa.hibernate.ddl-auto = update
+
+# JWT secrets
+application.jwt.secret-key=qwertyuiopasdfghjklzxcvbnmqazwsxedcrfvtgbyhnujmikolp
+# JWT config
+application.jwt.tokenPrefix=
+application.jwt.tokenExpirationAfterDays=14
