db updaters, error response

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,17 @@ spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate ddl auto (create, create-drop, validate, update, none)
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto=create
 
 # JWT secrets
 application.jwt.secret-key=qwertyuiopasdfghjklzxcvbnmqazwsxedcrfvtgbyhnujmikolp
-# JWT config
 application.jwt.tokenPrefix=
 application.jwt.tokenExpirationAfterDays=14
+
+# Parse csv and insert data mode
+application.db.parse-and-insert-data=true
+# Attention! This takes about 6 mins.
+application.db.parse-and-insert-data.override-users=true
+
+# Logging preferences
+logging.level.com.nurtdinov.educationaltrackpersonalization.security=ERROR
