read articles feature

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,12 @@ spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate ddl auto (create, create-drop, validate, update, none)
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
+
+# REST responses encoding
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
 
 # JWT secrets
 application.jwt.secret-key=qwertyuiopasdfghjklzxcvbnmqazwsxedcrfvtgbyhnujmikolp
@@ -12,9 +17,9 @@ application.jwt.tokenPrefix=
 application.jwt.tokenExpirationAfterDays=14
 
 # Parse csv and insert data mode
-application.db.parse-and-insert-data=true
-# Attention! This takes about 6 mins.
-application.db.parse-and-insert-data.override-users=true
+application.db.parse-and-insert-data=false
+# Attention! This takes a long-long time!
+application.db.parse-and-insert-data.override-users=false
 
 # Logging preferences
 logging.level.com.nurtdinov.educationaltrackpersonalization.security=ERROR
