--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,5 @@ application.db.parse-and-insert-data.override-users=false
 
 # Logging preferences
 logging.level.com.nurtdinov.educationaltrackpersonalization.security=ERROR
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
