--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,7 @@ application.db.parse-and-insert-data.override-users=false
 logging.level.com.nurtdinov.educationaltrackpersonalization.security=ERROR
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
+
+# Recommender model connection settings
+application.recommender.recommenderModelHost=127.0.0.1:8000
+application.recommender.similarUsersInSkillsEndpoint=recommender/similarUsersInSkillSet
