--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,15 @@ dependencies {
 
 	implementation group: 'com.opencsv', name: 'opencsv', version: '5.3'
 
+	implementation ('org.apache.mahout:mahout-mr:0.13.0') {
+		exclude group: 'org.slf4j', module: 'slf4j-log4j12'
+	}
+//	implementation group: 'net.librec', name: 'librec-core', version: '2.0.0'
+
+//	compileOnly (group: 'org.apache.spark', name: 'spark-mllib_2.13', version: '3.2.1') {
+//		exclude group: 'org.slf4j', module: 'slf4j-log4j12'
+//	}
+
 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
